# urbi

./: .dockerignore  Dockerfile  LICENSE  README.md  _sample_mapping.py  docker-compose.yml  pyproject.toml
app/: app.py  dynamic_modules.py  settings.py
tests/: test_app.py
tests/fixtures/mappings/: b.py
